<resources>
    <string name="app_name">216230113</string>
    <string name="about_me">한양여자대학교</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">Calendar</string>
    <string name="change_text">Change Text</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="space" />
    <string name="gallery">갤러리</string>
    <string name="check_list">체크 리스트</string>
    <string name="title_activity_maps">Map</string>
    <string name="c">반: C반</string>
    <string name="_19980208">생년월일: 19980208</string>
    <string name="이름">이름: 선가을</string>
    <string name="사는곳">사는 곳: 경기도 부천</string>
    <string name="학과">학과: 정보경영과</string>
    <string name="학교">학교: 한양여자대학교</string>
    <string name="학번">학번</string>
    <string name="_216230113">학번: 216230113</string>
    <string name="학생삭제">학생 삭제</string>
    <string name="학생찾기">학생 찾기</string>
    <string name="학생추가">학생 추가</string>
    <string name="학생번호">학생번호</string>
    <string name="학생이름">학생이름</string>
    <string name="_0">시작 버튼을 눌러주세요.</string>
    <string name="thread">발표 시작</string>
    <string name="thread2">발표 끝</string>
    <string name="go">검색</string>
</resources>
