<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ebookfrenzy.android.Main2Activity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints">

        <TabHost
            android:id="@+id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:background="@color/colorPrimaryDark" />

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/me"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/이름"
                            />
                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_19980208"
                            />
                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/사는곳"
                            />
                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/학교"
                            />
                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/학과"
                            />
                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_216230113"
                            />
                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/c"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/thread"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/timer_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:textSize="20sp"/>
                            <!--android:layout_marginRight="8dp"-->
                            <!--app:layout_constraintRight_toRightOf="parent"-->
                            <!--android:layout_marginLeft="8dp"-->
                            <!--app:layout_constraintLeft_toLeftOf="parent"-->
                            <!--app:layout_constraintTop_toTopOf="parent"-->
                            <!--android:layout_marginTop="8dp"-->
                            <!--app:layout_constraintBottom_toBottomOf="parent"-->
                            <!--android:layout_marginBottom="8dp"-->
                            <!--app:layout_constraintHorizontal_bias="0.501"-->
                            <!--app:layout_constraintVertical_bias="0.401" -->


                        <Button
                            android:id="@+id/btn_start"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onButtonClick"
                            android:text="@string/thread"
                            tools:layout_editor_absoluteX="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="8dp"
                            app:layout_constraintVertical_bias="0.561" />

                        <Button
                            android:id="@+id/btn_stop"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onButtonClick"
                            android:text="@string/thread2"
                            tools:layout_editor_absoluteX="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="8dp"
                            app:layout_constraintVertical_bias="0.713" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/db"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        tools:context="com.ebookfrenzy.nov_15.DatabaseActivity">

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp">

                                <TextView
                                    android:id="@+id/textView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/학생번호"
                                    android:textSize="18sp" />

                                <TextView
                                    android:id="@+id/studentID"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:textSize="18sp" />
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp">

                                <TextView
                                    android:id="@+id/textView3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/학생이름"
                                    android:textSize="18sp" />

                                <EditText
                                    android:id="@+id/studentName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:inputType="none"
                                    android:textSize="18sp"
                                    tools:ignore="LabelFor" />
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp">

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/학번"
                                    android:textSize="18sp" />

                                <EditText
                                    android:id="@+id/studentNumber"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:inputType="numberDecimal"
                                    android:textSize="18sp"
                                    tools:ignore="LabelFor" />
                            </TableRow>

                        </TableLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/addButton"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/학생추가"
                                android:textAllCaps="false"
                                android:onClick="newStudent" />

                            <Button
                                android:id="@+id/findButton"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/학생찾기"
                                android:textAllCaps="false"
                                android:onClick="lookupStudent" />

                            <Button
                                android:id="@+id/deleteButton"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/학생삭제"
                                android:textAllCaps="false"
                                android:onClick="removeStudent" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/google"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:tools="http://schemas.android.com/tools"
                            android:id="@+id/map"
                            android:name="com.google.android.gms.maps.SupportMapFragment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:context="com.ebookfrenzy.android.MapsActivity"
                            tools:layout="@layout/activity_maps" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/web"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1">

                        <EditText
                            android:layout_width="257dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/uri"
                            tools:ignore="LabelFor,TextFields" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/go"
                            android:id="@+id/go"
                            android:layout_gravity="left"
                            tools:ignore="RtlHardcoded" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="1">

                            <WebView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/wv"
                                android:layout_weight="0.67"
                                tools:ignore="InefficientWeight" />

                        </LinearLayout>

                    </LinearLayout>


                </FrameLayout>
            </LinearLayout>
        </TabHost>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>

